--- a/Tour/Tour/index.html
+++ b/Tour/Tour/index.html
@@ -123,75 +123,9 @@
           <div class="col-lg-5">
             <div class="booking-form-wrapper" data-aos="fade-left" data-aos-delay="200">
               <div class="booking-form">
-                <h3 class="form-title">Plan Your Adventure</h3>
-                <form action="" class="">
-                  <div class="form-group mb-3">
-                    <label for="destination">Destination</label>
-                    <select name="destination" id="destination" class="form-select" required="">
-                      <option value="">Choose your destination</option>
-                      <option value="europe">Europe</option>
-                      <option value="asia">Asia</option>
-                      <option value="america">America</option>
-                      <option value="africa">Africa</option>
-                      <option value="oceania">Oceania</option>
-                    </select>
-                  </div>
-
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="form-group mb-3">
-                        <label for="checkin">Departure Date</label>
-                        <input type="date" name="checkin" id="checkin" class="form-control" required="">
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="form-group mb-3">
-                        <label for="checkout">Return Date</label>
-                        <input type="date" name="checkout" id="checkout" class="form-control" required="">
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="form-group mb-3">
-                        <label for="adults">Adults</label>
-                        <select name="adults" id="adults" class="form-select" required="">
-                          <option value="1">1 Adult</option>
-                          <option value="2">2 Adults</option>
-                          <option value="3">3 Adults</option>
-                          <option value="4">4+ Adults</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="form-group mb-3">
-                        <label for="children">Children</label>
-                        <select name="children" id="children" class="form-select">
-                          <option value="0">No Children</option>
-                          <option value="1">1 Child</option>
-                          <option value="2">2 Children</option>
-                          <option value="3">3+ Children</option>
-                        </select>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="form-group mb-3">
-                    <label for="tour-type">Tour Type</label>
-                    <select name="tour_type" id="tour-type" class="form-select" required="">
-                      <option value="">Select tour type</option>
-                      <option value="adventure">Adventure</option>
-                      <option value="cultural">Cultural</option>
-                      <option value="relaxation">Relaxation</option>
-                      <option value="family">Family</option>
-                      <option value="luxury">Luxury</option>
-                    </select>
-                  </div>
-
-                  <button type="submit" class="btn btn-primary w-100">Find Your Perfect Trip</button>
-                </form>
-              </div> -->
+                <img src="/Tour/Tour/assets/img/person/person-m-6.webp" alt="" id="indexPersonPFP">
+                
+              </div>
             </div>
           </div>
         </div>
