--- a/Tour/Tour/index.html
+++ b/Tour/Tour/index.html
@@ -44,16 +44,33 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.webp" alt=""> -->
-        <h1 class="sitename">Tour</h1>
+        <h1 class="sitename">KEYBOARD</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="skills.html">Skills</a></li>
-          <li><a href="experience.html">Experience</a></li>
-          <li><a href="education.html">Education</a></li>
+          <!-- <li><a href="about.html">Product</a></li> -->
+           <li class="dropdown"><a href="product.html"><span>Product</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <ul>
+              <li><a href="#">Dropdown 1</a></li>
+               <!-- <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <ul>
+                  <li><a href="#">Deep Dropdown 1</a></li>
+                  <li><a href="#">Deep Dropdown 2</a></li>
+                  <li><a href="#">Deep Dropdown 3</a></li>
+                  <li><a href="#">Deep Dropdown 4</a></li>
+                  <li><a href="#">Deep Dropdown 5</a></li>
+                </ul>
+              </li> -->
+              <li><a href="#">Dropdown 2</a></li>
+              <li><a href="#">Dropdown 3</a></li>
+              <li><a href="#">Dropdown 4</a></li>
+            </ul>
+          </li>
+          <li><a href="skills.html">Accessories</a></li>
+          <li><a href="accessorie.html">Review</a></li>
+          <!-- <li><a href="education.html">Education</a></li> -->
           <!-- <li><a href="blog.html">Contact</a></li>  -->
           <!-- <li class="dropdown"><a href="#"><span>More Pages</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
@@ -68,29 +85,13 @@
               <li><a href="404.html">404</a></li>
             </ul>
           </li> -->
-          <li class="dropdown"><a href="#"><span>Projects</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <!-- <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li> -->
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
-            </ul>
-          </li>
+         
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="destiantios.html">Get Started</a>
+      <a class="btn-getstarted"></a>
 
     </div>
   </header>
@@ -111,11 +112,11 @@
         <div class="row align-items-center">
           <div class="col-lg-7">
             <div class="hero-text" data-aos="fade-up" data-aos-delay="100">
-              <h1 class="hero-title">Discover Your Perfect Journey</h1>
-              <p class="hero-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+              <h1 class="hero-title">เลือกซื้อคีย์บอร์ดที่ใช่<br>สำหรับคุณ</h1>
+              <p class="hero-subtitle">เราคือผู้เชี่ยวชาญปรมาจารย์ด้านคีย์บอร์ดวิทยา หากคุณกำลังสนใจหรือกำลังเลือกซื้อคีย์บอร์ด<br>สัมผัสประสบการณ์โดยที่ไม่ต้องออกจากบ้านมาลองด้วยตัวเอง </p>
               <div class="hero-buttons">
-                <a href="#" class="btn btn-primary me-3">Start Exploring</a>
-                <a href="#" class="btn btn-outline">Browse Tours</a>
+                <a href="#" class="btn btn-primary me-3">เลือกซื้อ</a>
+                <a href="#" class="btn btn-outline">รีวิว</a>
               </div>
             </div>
           </div>
@@ -123,7 +124,7 @@
           <div class="col-lg-5">
             <div class="booking-form-wrapper" data-aos="fade-left" data-aos-delay="200">
               <div class="booking-form">
-                <img src="/Tour/Tour/assets/img/person/person-m-6.webp" alt="" id="indexPersonPFP">
+                <img src="" alt="" id="indexPersonPFP">
                 
               </div>
             </div>
