--- a/Tour/Tour/product.html
+++ b/Tour/Tour/product.html
@@ -44,7 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.webp" alt=""> -->
-        <h1 class="sitename">Tour</h1>
+        <h1 class="sitename">KEYBOARD</h1>
       </a>
 
      <nav id="navmenu" class="navmenu">
@@ -68,8 +68,8 @@
               <li><a href="#">Dropdown 4</a></li>
             </ul>
           </li>
-          <li><a href="skills.html">Accessories</a></li>
-          <li><a href="experience.html">Review</a></li>
+          <li><a href="accessorie.html">Accessories</a></li>
+          <li><a href="review.html">Review</a></li>
           <!-- <li><a href="education.html">Education</a></li> -->
           <!-- <li><a href="blog.html">Contact</a></li>  -->
           <!-- <li class="dropdown"><a href="#"><span>More Pages</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -91,7 +91,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="destiantios.html">Get Started</a>
+      <a class="btn-getstarted" href="destiantios.html"></a>
 
     </div>
   </header>
