--- a/Tour/Tour/accessorie.html
+++ b/Tour/Tour/accessorie.html
@@ -47,13 +47,13 @@
         <h1 class="sitename">KEYBOARD</h1>
       </a>
 
-     <nav id="navmenu" class="navmenu">
+    <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
           <!-- <li><a href="about.html">Product</a></li> -->
            <li class="dropdown"><a href="product.html"><span>Product</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Dropdown 1</a></li>
+              <li><a href = "/Tour/Tour/product-to-sell-page/loga.html ">Loga Yaksa Pro: Maiyarap Edition</a></li>
                <!-- <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <li><a href="#">Deep Dropdown 1</a></li>
@@ -63,13 +63,13 @@
                   <li><a href="#">Deep Dropdown 5</a></li>
                 </ul>
               </li> -->
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
+              <li ><a href="#">Wooting 60HE</a></li>
+              <li class="navBarphoto"><a href="#">Ajazz AK820 Max Plus</a></li>
+              <li class="navBarphoto"><a href="#">PULSAR XBOARD MS</a></li>
             </ul>
           </li>
           <li><a href="accessorie.html">Accessories</a></li>
-          <li><a href="review.html">Review</a></li>
+          <!-- <li><a href="review.html">Review</a></li> -->
           <!-- <li><a href="education.html">Education</a></li> -->
           <!-- <li><a href="blog.html">Contact</a></li>  -->
           <!-- <li class="dropdown"><a href="#"><span>More Pages</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -101,14 +101,9 @@
     <!-- Page Title -->
     <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/travel/showcase-8.webp);">
       <div class="container position-relative">
-        <h1>Destinations</h1>
-        <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p>
-        <nav class="breadcrumbs">
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">Destinations</li>
-          </ol>
-        </nav>
+        <h1>Accessories</h1>
+        <p>อุปกรณ์ หรือ gadget ต่างๆของคีย์บอร์ด</p>
+        
       </div>
     </div><!-- End Page Title -->
 
@@ -119,19 +114,19 @@
 
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2>Uncover Captivating Travel Experiences</h2>
-            <p class="mb-5">From the bustling energy of cosmopolitan cities to the serene embrace of untouched wilderness, embark on incredible journeys to the planet's most enchanting destinations. We're here to help you craft memories that will last a lifetime.</p>
+            <h2>ตกแต่งอุปกรณ์เสริมให้กับคีย์บอร์ดของคุณ</h2>
+            <p class="mb-5">แค่คีย์บอร์ดอย่างเดียวคงจะน่าเบื่อ เรามีอุปกรณ์ต่างๆที่ทำให้คีย์บอร์ดของเราแตกต่างจากเดิมไปอย่างสิ้นเชิง มีลูกเล่นต่างๆ หรือปรับเปลี่ยนอุปกรณ์ต่างๆของคีย์บอร์ดได้</p>
           </div>
         </div>
 
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
           <ul class="destination-filters isotope-filters" data-aos="fade-up" data-aos-delay="200">
-            <li data-filter="*" class="filter-active">All Locales</li>
-            <li data-filter=".filter-tropical">Tropical</li>
-            <li data-filter=".filter-mountain">Alpine</li>
-            <li data-filter=".filter-urban">Cityscapes</li>
-            <li data-filter=".filter-historical">Heritage</li>
-            <li data-filter=".filter-coastal">Seaside</li>
+            <li data-filter="*" class="filter-active">สินค้าทั้งหมด</li>
+            <li data-filter=".filter-tropical">แผ่นรอง เมาส์ / คีย์บอร์ด</li>
+            <li data-filter=".filter-mountain">คีย์แคป</li>
+            <li data-filter=".filter-urban">สายคีย์บอร์ด</li>
+            <li data-filter=".filter-historical">สวิชต์คีย์บอร์ด</li>
+            <li data-filter=".filter-coastal">ที่รองข้อมือ</li>
           </ul><!-- End Destination Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
@@ -177,7 +172,7 @@
             <div class="col-lg-4 col-md-6 destination-item isotope-item filter-mountain">
               <a href="destination-details.html" class="destination-tile">
                 <div class="tile-image">
-                  <img src="assets/img/travel/destination-6.webp" alt="Swiss Alps" class="img-fluid" loading="lazy">
+                  <img src="assets/img/keyboard/keycap1.jpg" alt="Swiss Alps" class="img-fluid" loading="lazy">
                   <div class="overlay-content">
                     <span class="destination-tag adventure">Alpine</span>
                     <div class="destination-info">
@@ -196,7 +191,7 @@
             <div class="col-lg-4 col-md-6 destination-item isotope-item filter-tropical">
               <a href="destination-details.html" class="destination-tile">
                 <div class="tile-image">
-                  <img src="assets/img/travel/destination-8.webp" alt="Costa Rica" class="img-fluid" loading="lazy">
+                  <img src="assets/img/keyboard/mousepadRazor.jpg" alt="Costa Rica" class="img-fluid" loading="lazy">
                   <div class="overlay-content">
                     <span class="destination-tag nature">Eco-Venture</span>
                     <div class="destination-info">
@@ -215,7 +210,7 @@
             <div class="col-lg-4 col-md-6 destination-item isotope-item filter-urban">
               <a href="destination-details.html" class="destination-tile">
                 <div class="tile-image">
-                  <img src="assets/img/travel/destination-10.webp" alt="Dubai, UAE" class="img-fluid" loading="lazy">
+                  <img src="assets/img/keyboard/coiled-cable.jpg alt="Dubai, UAE" class="img-fluid" loading="lazy">
                   <div class="overlay-content">
                     <span class="destination-tag modern">Cosmopolitan</span>
                     <div class="destination-info">
@@ -253,7 +248,7 @@
             <div class="col-lg-4 col-md-6 destination-item isotope-item filter-tropical">
               <a href="destination-details.html" class="destination-tile">
                 <div class="tile-image">
-                  <img src="assets/img/travel/destination-14.webp" alt="Thailand" class="img-fluid" loading="lazy">
+                  <img src="assets/img/keyboard/mousepadRed.jpg" alt="Thailand" class="img-fluid" loading="lazy">
                   <div class="overlay-content">
                     <span class="destination-tag popular">Vibrant</span>
                     <div class="destination-info">
@@ -272,7 +267,7 @@
             <div class="col-lg-4 col-md-6 destination-item isotope-item filter-mountain">
               <a href="destination-details.html" class="destination-tile">
                 <div class="tile-image">
-                  <img src="assets/img/travel/destination-16.webp" alt="Nepal Himalayas" class="img-fluid" loading="lazy">
+                  <img src="assets/img/keyboard/keycap2.jpg" alt="Nepal Himalayas" class="img-fluid" loading="lazy">
                   <div class="overlay-content">
                     <span class="destination-tag trekking">Ascent</span>
                     <div class="destination-info">
@@ -307,24 +302,7 @@
               </a>
             </div><!-- End Destination Item -->
 
-            <div class="col-lg-4 col-md-6 destination-item isotope-item filter-urban">
-              <a href="destination-details.html" class="destination-tile">
-                <div class="tile-image">
-                  <img src="assets/img/travel/destination-20.webp" alt="Singapore" class="img-fluid" loading="lazy">
-                  <div class="overlay-content">
-                    <span class="destination-tag family">Family-Friendly</span>
-                    <div class="destination-info">
-                      <h4>Singapore</h4>
-                      <p>A modern garden city, celebrated for its bold architecture and diverse culinary scene.</p>
-                      <div class="destination-stats">
-                        <span class="tours-available"><i class="bi bi-map"></i> 17 Adventures</span>
-                        <span class="starting-price">From $1,399</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div><!-- End Destination Item -->
+            
 
           </div><!-- End Destinations Container -->
 
