--- a/Tour/Tour/contact.html
+++ b/Tour/Tour/contact.html
@@ -53,7 +53,7 @@
           <!-- <li><a href="about.html">Product</a></li> -->
            <li class="dropdown"><a href="product.html"><span>Product</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">Dropdown 1</a></li>
+              <li><a href = "/Tour/Tour/product-to-sell-page/loga.html ">Loga Yaksa Pro: Maiyarap Edition</a></li>
                <!-- <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <li><a href="#">Deep Dropdown 1</a></li>
@@ -63,13 +63,13 @@
                   <li><a href="#">Deep Dropdown 5</a></li>
                 </ul>
               </li> -->
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
+              <li ><a href="#">Wooting 60HE</a></li>
+              <li class="navBarphoto"><a href="#">Ajazz AK820 Max Plus</a></li>
+              <li class="navBarphoto"><a href="#">PULSAR XBOARD MS</a></li>
             </ul>
           </li>
           <li><a href="accessorie.html">Accessories</a></li>
-          <li><a href="review.html">Review</a></li>
+          <!-- <li><a href="review.html">Review</a></li> -->
           <!-- <li><a href="education.html">Education</a></li> -->
           <!-- <li><a href="blog.html">Contact</a></li>  -->
           <!-- <li class="dropdown"><a href="#"><span>More Pages</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
