--- a/Tour/Tour/contact.html
+++ b/Tour/Tour/contact.html
@@ -99,16 +99,11 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/travel/showcase-8.webp);">
+    <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/keyboard/360_F_687626018_HHgA1a0lCaV5Wg2LAchastzEZeMXqiVU.jpg);">
       <div class="container position-relative">
-        <h1>Contact</h1>
-        <p>Esse dolorum voluptatum ullam est sint nemo et est ipsa porro placeat quibusdam quia assumenda numquam molestias.</p>
-        <nav class="breadcrumbs">
-          <ol>
-            <li><a href="index.html">Home</a></li>
-            <li class="current">Contact</li>
-          </ol>
-        </nav>
+        <h1>ติดต่อเรา</h1>
+        <p>หากมีข้อสงสัยอะไร ท่านสามารถติดต่อเราได้ตามที่อยู่ด้านล่างต่างๆตามนี้</p>
+        
       </div>
     </div><!-- End Page Title -->
 
@@ -125,7 +120,7 @@
                 <i class="bi bi-geo-alt"></i>
               </div>
               <div class="info-content">
-                <h4>Our Address</h4>
+                <h4>ที่อยู่บริษัทใหญ่</h4>
                 <p>1842 Maple Avenue, Portland, Oregon 97204</p>
               </div>
             </div>
@@ -137,7 +132,7 @@
                 <i class="bi bi-envelope"></i>
               </div>
               <div class="info-content">
-                <h4>Email Address</h4>
+                <h4>ที่อยู่ Email</h4>
                 <p>info@example.com</p>
                 <p>contact@example.com</p>
               </div>
@@ -150,7 +145,7 @@
                 <i class="bi bi-headset"></i>
               </div>
               <div class="info-content">
-                <h4>Hours of Operation</h4>
+                <h4>ช่วงเวลาที่ให้บริการ</h4>
                 <p>Sunday-Fri: 9 AM - 6 PM</p>
                 <p>Saturday: 9 AM - 4 PM</p>
               </div>
@@ -170,15 +165,15 @@
         <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="300">
           <div class="col-lg-10">
             <div class="contact-form-wrapper">
-              <h2 class="text-center mb-4">Get in Touch</h2>
+              <h2 class="text-center mb-4">ติดต่อเราอย่างรวดเร็ว</h2>
 
-              <form action="forms/contact.php" method="post" class="php-email-form">
+              <form action="forms/contact.php" method="" class="php-email-form">
                 <div class="row g-3">
                   <div class="col-md-6">
                     <div class="form-group">
                       <div class="input-with-icon">
                         <i class="bi bi-person"></i>
-                        <input type="text" class="form-control" name="name" placeholder="First Name" required="">
+                        <input type="text" class="form-control" name="name" placeholder="ชื่อ" required="">
                       </div>
                     </div>
                   </div>
@@ -187,7 +182,7 @@
                     <div class="form-group">
                       <div class="input-with-icon">
                         <i class="bi bi-envelope"></i>
-                        <input type="email" class="form-control" name="email" placeholder="Email Address" required="">
+                        <input type="email" class="form-control" name="email" placeholder="ที่อยู่ email" required="">
                       </div>
                     </div>
                   </div>
@@ -196,7 +191,7 @@
                     <div class="form-group">
                       <div class="input-with-icon">
                         <i class="bi bi-text-left"></i>
-                        <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
+                        <input type="text" class="form-control" name="subject" placeholder="หัวข้อ" required="">
                       </div>
                     </div>
                   </div>
@@ -205,7 +200,7 @@
                     <div class="form-group">
                       <div class="input-with-icon">
                         <i class="bi bi-chat-dots message-icon"></i>
-                        <textarea class="form-control" name="message" placeholder="Write Message..." style="height: 180px" required=""></textarea>
+                        <textarea class="form-control" name="message" placeholder="เขียนข้อความ . . ." style="height: 180px" required=""></textarea>
                       </div>
                     </div>
                   </div>
@@ -217,7 +212,7 @@
                   </div>
 
                   <div class="col-12 text-center">
-                    <button type="submit" class="btn btn-primary btn-submit">SEND MESSAGE</button>
+                    <button type="reset" class="btn btn-primary btn-submit">ส่งข้อความ</button>
                   </div>
                 </div>
               </form>
@@ -233,70 +228,7 @@
 
   <footer id="footer" class="footer position-relative dark-background">
 
-    <div class="footer-newsletter">
-      <div class="container">
-        <div class="row justify-content-center text-center">
-          <div class="col-lg-6">
-            <h4>Join Our Newsletter</h4>
-            <p>Subscribe to our newsletter and receive the latest news about our products and services!</p>
-            <form action="forms/newsletter.php" method="post" class="php-email-form">
-              <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Subscribe"></div>
-              <div class="loading">Loading</div>
-              <div class="error-message"></div>
-              <div class="sent-message">Your subscription request has been sent. Thank you!</div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container footer-top">
-      <div class="row gy-4">
-        <div class="col-lg-4 col-md-6 footer-about">
-          <a href="index.html" class="d-flex align-items-center">
-            <span class="sitename">Tour</span>
-          </a>
-          <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
-          </div>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
-          <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
-          <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-4 col-md-12">
-          <h4>Follow Us</h4>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
-          <div class="social-links d-flex">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
-          </div>
-        </div>
-
-      </div>
-    </div>
+   
 
     <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong class="px-1 sitename">MyWebsite</strong> <span>All Rights Reserved</span></p>
